add alloc support
This is quite tricky. Try out both the global allocator path (which
requires nightly for the alloc_error_handler), and a straight call to
malloc, which is not very ergonomic.

cbindgen gets a little confused by the two implementations of
allocate_struct, and emits two copies into the .h file. That should be
harmless, and I don't know how to fix it, anyway.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,26 @@ authors = ["Eric Seppanen <eds@reric.net>"]
 edition = "2018"
 license = "MIT"
 
+resolver = "2"
+
 [lib]
 name = "demo"
 crate-type = ["staticlib"]
+
+[features]
+# Enable the `alloc` feature to get access to Box, Vec, etc.
+alloc = ["libc_alloc"]
+default = ["alloc"] # Build with --no-default-features to run without alloc.
 
 [profile.dev]
 panic = "abort"
 
 [profile.release]
 panic = "abort"
+
+[dependencies]
+libc_alloc = { version = "1.0", optional = true }
+libc = "0.2"
 
 [build-dependencies]
 cbindgen = "0.19"
